--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,8 @@
         <druid.version>1.1.10</druid.version>
         <fastjson.version>1.2.12</fastjson.version>
         <pagehelper.version>1.2.5</pagehelper.version>
+        <shiro.verison>1.3.2</shiro.verison>
+        <jwt.version>3.2.0</jwt.version>
     </properties>
 
     <dependencies>
@@ -37,12 +39,7 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
-        <!-- MyBatis -->
-        <!--<dependency>
-            <groupId>org.mybatis.spring.boot</groupId>
-            <artifactId>mybatis-spring-boot-starter</artifactId>
-            <version>${mybatis-stater.version}</version>
-        </dependency>-->
+        <!-- MyBatis-Plus -->
         <dependency>
             <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus-boot-starter</artifactId>
@@ -54,12 +51,6 @@
                 </exclusion>
             </exclusions>
         </dependency>
-        <!-- Page Helper -->
-        <!--<dependency>
-            <groupId>com.github.pagehelper</groupId>
-            <artifactId>pagehelper-spring-boot-starter</artifactId>
-            <version>${pagehelper.version}</version>
-        </dependency>-->
         <!-- MySql -->
         <dependency>
             <groupId>mysql</groupId>
@@ -69,6 +60,18 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+        <!-- Shiro-->
+        <dependency>
+            <groupId>org.apache.shiro</groupId>
+            <artifactId>shiro-spring</artifactId>
+            <version>${shiro.verison}</version>
+        </dependency>
+        <!-- JWT -->
+        <dependency>
+            <groupId>com.auth0</groupId>
+            <artifactId>java-jwt</artifactId>
+            <version>${jwt.version}</version>
         </dependency>
         <!--fastJson-->
         <dependency>
