Edit     - 重构JWT部分代码     - 修改pom文件     - 修改SpringBoot入口文件

--- a/pom.xml
+++ b/pom.xml
@@ -24,13 +24,13 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
         <!-- Dependencies version -->
-        <mybatis-stater.version>1.3.2</mybatis-stater.version>
         <mybatis-plus-starter.version>2.1.9</mybatis-plus-starter.version>
         <druid.version>1.1.10</druid.version>
         <fastjson.version>1.2.12</fastjson.version>
-        <pagehelper.version>1.2.5</pagehelper.version>
         <shiro.verison>1.3.2</shiro.verison>
         <jwt.version>3.2.0</jwt.version>
+        <guava.version>18.0</guava.version>
+        <lombok.version>1.18.0</lombok.version>
     </properties>
 
     <dependencies>
@@ -38,6 +38,11 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <!-- Spring Boot AOP -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
         </dependency>
         <!-- MyBatis-Plus -->
         <dependency>
@@ -84,6 +89,31 @@
             <groupId>com.alibaba</groupId>
             <artifactId>druid-spring-boot-starter</artifactId>
             <version>${druid.version}</version>
+        </dependency>
+        <!-- commons-pool2 -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-pool2</artifactId>
+            <version>${commons-pool2.version}</version>
+        </dependency>
+        <!-- Utils: commons-lang3 -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>${commons-lang3.version}</version>
+        </dependency>
+        <!-- Guava -->
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>${guava.version}</version>
+        </dependency>
+        <!-- Lombok -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>${lombok.version}</version>
+            <scope>provided</scope>
         </dependency>
         <!-- Spring Boot Test -->
         <dependency>
