--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,6 @@
 server:
-  port: 8081
+    host: 0.0.0.0
+    port: 8081
 spring:
     datasource:
         name: test
@@ -28,12 +29,12 @@ spring:
         password:
         port: 6379
         lettuce:
-          shutdown-timeout: 100ms
-          pool:
-              min-idle: 0
-              max-idle: 8
-              max-wait: -1ms
-              max-active: 8
+            shutdown-timeout: 100ms
+            pool:
+                min-idle: 0
+                max-idle: 8
+                max-wait: -1ms
+                max-active: 8
 mybatis:
     type-aliases-package: com.xavier.bean
 jwt:
@@ -43,3 +44,8 @@ jwt:
 logging:
     level:
         com.xavier: INFO
+springfox:
+    documentation:
+        swagger:
+            v2:
+                path: /api-docs
