--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,6 @@
         <shiro.verison>1.3.2</shiro.verison>
         <jwt.version>3.2.0</jwt.version>
         <guava.version>18.0</guava.version>
-        <lombok.version>1.18.0</lombok.version>
         <springfox.verison>2.2.2</springfox.verison>
     </properties>
 
@@ -51,6 +50,11 @@
                     <groupId>org.apache.tomcat</groupId>
                 </exclusion>
             </exclusions>
+        </dependency>
+        <!-- Atomikos -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-jta-atomikos</artifactId>
         </dependency>
         <!-- MySql -->
         <dependency>
