--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.0.0.RELEASE</version>
+        <version>2.0.6.RELEASE</version>
         <relativePath/>
     </parent>
 
@@ -29,8 +29,8 @@
         <fastjson.version>1.2.12</fastjson.version>
         <shiro.verison>1.3.2</shiro.verison>
         <jwt.version>3.2.0</jwt.version>
-        <guava.version>18.0</guava.version>
-        <springfox.verison>2.2.2</springfox.verison>
+        <guava.version>27.0.1-jre</guava.version>
+        <springfox.verison>2.9.2</springfox.verison>
     </properties>
 
     <dependencies>
@@ -50,6 +50,11 @@
                     <groupId>org.apache.tomcat</groupId>
                 </exclusion>
             </exclusions>
+        </dependency>
+        <!-- Aop -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
         </dependency>
         <!-- Atomikos -->
         <dependency>
